fix: prevent "Deactivate" text overflow from button
on small screen

--- a/assets/src/css/admin/setting-license.scss
+++ b/assets/src/css/admin/setting-license.scss
@@ -347,6 +347,7 @@ $license-widget-border-color: #DBDBDB;
 			button {
 				width: 85px;
 				height: 35px;
+				font-size: 1em;
 			}
 		}
 
